html_avance1 realicé el código de html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Static Template</title>
+    <meta charset="UTF-8" />
+    <meta name="autor" content="Erica Gramuglia" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Ejercicio 3 Entregable 18 de julio de 2022</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="https://w7.pngwing.com/pngs/517/481/png-transparent-technology-computer-icons-information-circle-technology-electronics-text-digital.png"
+      type="image/x-icon"
+    />
   </head>
+
   <body>
-    <h1>This is a static template, there is no bundler or bundling involved!</h1>
+    <div class="encabezado">
+      <h1>div encabezado</h1>
+      <div class="menu1">
+        <h2>div menú1</h2>
+      </div>
+      <div class="logo">
+        <h2>div logo</h2>
+      </div>
+      <div class="menu2">
+        <h2>div menú2</h2>
+      </div>
+    </div>
+    <div class="izquierda">
+      <h2>div izquierda</h2>
+    </div>
+    <div class="izquierda">
+      <h2>div izquierda</h2>
+    </div>
+    <div class="centro">
+      <h2>div centro</h2>
+    </div>
+    <div class="derecha">
+      <h2>div derecha</h2>
+    </div>
+    <div class="izquierda2">
+      <h2>div derecha2</h2>
+    </div>
+    <div class="derecha2">
+      <h2>div izquierda</h2>
+    </div>
+    <div class="pie">
+      <h1>div pie</h1>
+      <div class="elemento">
+        <h2>div elemento</h2>
+      </div>
+    </div>
   </body>
 </html>
