--- a/index.html
+++ b/index.html
@@ -26,23 +26,24 @@
         <h2>div menú2</h2>
       </div>
     </div>
-    <div class="izquierda">
-      <h2>div izquierda</h2>
+    <div class="padreCentroSuperior">
+      <div class="izquierda">
+        <h2>div izquierda</h2>
+      </div>
+      <div class="centro">
+        <h2>div centro</h2>
+      </div>
+      <div class="derecha">
+        <h2>div derecha</h2>
+      </div>
     </div>
-    <div class="izquierda">
-      <h2>div izquierda</h2>
-    </div>
-    <div class="centro">
-      <h2>div centro</h2>
-    </div>
-    <div class="derecha">
-      <h2>div derecha</h2>
-    </div>
-    <div class="izquierda2">
-      <h2>div derecha2</h2>
-    </div>
-    <div class="derecha2">
-      <h2>div izquierda</h2>
+    <div class="padreCentroInferior">
+      <div class="izquierda2">
+        <h2>div izquierda2</h2>
+      </div>
+      <div class="derecha2">
+        <h2>div derecha2</h2>
+      </div>
     </div>
     <div class="pie">
       <h1>div pie</h1>
